Massively improve merging of gamplay elements of lifeline into the skin. BUG: Sliders are slightly smaller than hitcircles

--- a/current/skin.ini
+++ b/current/skin.ini
@@ -1,8 +1,10 @@
 [General]
 Name: Yellowskin
-Author: Yellowsink
-Version: 2.5
-CursorExpand: 1
+Author: Various
+Version: 2
+AnimationFramerate: 60
+CursorCentre: 1
+CursorExpand: 0
 CursorRotate: 0
 CursorTrailRotate: 0
 AllowSliderBallTint: 0
@@ -12,16 +14,18 @@ HitCircleOverlayAboveNumber: 1
 
 
 [Colours]
-Combo1: 192,68,192
-Combo2: 255,68,68
-Combo3: 255,128,68
-Combo4: 255,255,85
-Combo5: 96,255,68
-Combo6: 0,128,255
+Combo1: 26,116,242
+Combo2: 164,32,240
+Combo3: 37,185,239
+Combo4: 23,209,116
+Combo5: 255,75,255
 
 SliderBorder: 220,220,220
-SliderTrackOverride: 0,0,0
+SliderTrackOverride: 15,15,20
 InputOverlayText: 255,255,255
+
+[Slider]
+SliderStyle: 2
 
 [Fonts]
 HitCirclePrefix: default
