--- a/current/skin.ini
+++ b/current/skin.ini
@@ -1,7 +1,7 @@
 [General]
-Name: Yellowskin
+Name: Yelloskin
 Author: Various
-Version: 2.1
+Version: 2.2
 AnimationFramerate: 60
 CursorCentre: 1
 CursorExpand: 0
