--- a/current/skin.ini
+++ b/current/skin.ini
@@ -50,313 +50,205 @@ HyperDashAfterImage: 0,255,0
 
 [Mania]
 Keys: 1
-ColumnStart: 415
-ColumnWidth: 25
-ColumnLineWidth: 0,0
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SplitStages: 0
+//Mania skin config
+ColumnStart: 136
+HitPosition: 402
 UpsideDown: 0
 JudgementLine: 1
+ScorePosition: 325
+ComboPosition: 170
+ColumnWidth: 60
 NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
+ColumnLineWidth: 2
+ColourColumnLine: 30,30,30
+//Colours
+ColourLight1: 255,255,255
+ColourBarline: 0,0,0,0
+ColumnLineWidth: 0
 
 [Mania]
 Keys: 2
-ColumnStart: 401
-ColumnSpacing: 0
-ColumnWidth: 25,25
-ColumnLineWidth: 2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SplitStages: 0
-StageSeparation: 50
+//Mania skin config
+ColumnStart: 136
+HitPosition: 402
 UpsideDown: 0
 JudgementLine: 1
+ScorePosition: 325
+ComboPosition: 170
+ColumnWidth: 60,60
 NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
+ColumnLineWidth: 2
+ColourColumnLine: 30,30,30
+//Colours
+ColourBarline: 0,0,0,0
+ColourLight1: 255,255,255
+ColourLight2: 255,255,255
+ColumnLineWidth: 0,0
 
 [Mania]
 Keys: 3
-ColumnStart: 389
-ColumnSpacing: 0,0
-ColumnWidth: 25,25,25
-ColumnLineWidth: 2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SplitStages: 0
-StageSeparation: 50
+//Mania skin config
+ColumnStart: 136
+HitPosition: 402
 UpsideDown: 0
-JudgementLine: 1
+JudgementLine: 0
+ScorePosition: 325
+ComboPosition: 170
+ColumnWidth: 60,60,60
 NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
+ColumnLineWidth: 2
+ColourColumnLine: 30,30,30
+//Colours
+ColourLight1: 255,255,255
+ColourLight2: 255,255,255
+ColourLight3: 255,255,255
+ColourBarline: 0,0,0,0
+ColumnLineWidth: 0,0,0
 
 [Mania]
 Keys: 4
-ColumnStart: 377
-ColumnSpacing: 0,0,0
-ColumnWidth: 25,25,25,25
-ColumnLineWidth: 2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SplitStages: 0
-StageSeparation: 50
+//Mania skin config
+ColumnStart: 300
+HitPosition: 402
 UpsideDown: 0
-JudgementLine: 1
+JudgementLine: 0
+ScorePosition: 285
+ComboPosition: 170
+ColumnWidth: 60,60,60,60
 NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
+ColumnLineWidth: 2
+ColourColumnLine: 30,30,30
+//Colours
+ColourLight1: 255,255,255
+ColourLight2: 255,255,255
+ColourLight3: 255,255,255
+ColourLight4: 255,255,255
+ColourBreak: 255,0,0,255
+ColourHold: 255,255,255,255
+ColourBarline: 0,0,0,0
+ColumnLineWidth: 0,0,0,0
 
 [Mania]
 Keys: 5
-ColumnStart: 364
-ColumnSpacing: 0,0,0,0
-ColumnWidth: 25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SplitStages: 0
-StageSeparation: 50
+//Mania skin config
+ColumnStart: 136
+HitPosition: 402
 UpsideDown: 0
-JudgementLine: 1
+JudgementLine: 0
+ScorePosition: 325
+ComboPosition: 170
+ColumnWidth: 60,60,60,60,60
 NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
+ColumnLineWidth: 2
+ColourColumnLine: 30,30,30
+//Colours
+ColourLight1: 255,255,255
+ColourLight2: 255,255,255
+ColourLight3: 255,255,255
+ColourLight4: 255,255,255
+ColourLight5: 255,255,255
+ColourBreak: 255,0,0,255
+ColourHold: 255,255,255,255
+ColourBarline: 0,0,0,0
+ColumnLineWidth: 0,0,0,0,0
 
 [Mania]
 Keys: 6
-ColumnStart: 351
-ColumnSpacing: 0,0,0,0,0
-ColumnWidth: 25,25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SpecialStyle: 1
-SplitStages: 0
-StageSeparation: 50
+//Mania skin config
+ColumnStart: 136
+HitPosition: 402
 UpsideDown: 0
-JudgementLine: 1
+JudgementLine: 0
+ScorePosition: 325
+ComboPosition: 170
+ColumnWidth: 60,60,60,60,60,60
 NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
+ColumnLineWidth: 2
+ColourColumnLine: 30,30,30
+//Colours
+ColourLight1: 255,255,255
+ColourLight2: 255,255,255
+ColourLight3: 255,255,255
+ColourLight4: 255,255,255
+ColourLight5: 255,255,255
+ColourLight6: 255,255,255
+ColourBreak: 255,0,0,255
+ColourHold: 255,255,255,255
+ColourBarline: 0,0,0,0
+ColumnLineWidth: 0,0,0,0,0,0
 
 [Mania]
 Keys: 7
-ColumnStart: 339
-ColumnSpacing: 0,0,0,0,0,0
-ColumnWidth: 25,25,25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SplitStages: 0
-StageSeparation: 50
+//Mania skin config
+ColumnStart: 136
+HitPosition: 402
 UpsideDown: 0
-KeysUnderNotes: 0
-JudgementLine: 1
+JudgementLine: 0
+ScorePosition: 325
+ComboPosition: 170
+ColumnWidth: 60,60,60,60,60,60,60
 NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
+ColumnLineWidth: 2
+ColourColumnLine: 30,30,30
+//Colours
+ColourLight1: 255,255,255
+ColourLight2: 255,255,255
+ColourLight3: 255,255,255
+ColourLight4: 255,255,255
+ColourLight5: 255,255,255
+ColourLight6: 255,255,255
+ColourLight7: 255,255,255
+ColourBarline: 0,0,0,0
+ColumnLineWidth: 0,0,0,0,0,0,0
 
 [Mania]
 Keys: 8
-ColumnStart: 327
-ColumnSpacing: 0,0,0,0,0,0,0
-ColumnWidth: 25,25,25,25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SpecialStyle: 1
-SplitStages: 0
-StageSeparation: 50
+//Mania skin config
+ColumnStart: 136
+HitPosition: 402
 UpsideDown: 0
-JudgementLine: 1
+JudgementLine: 0
+ScorePosition: 325
+ComboPosition: 170
+LightFramePerSecond: 24
+ColumnWidth: 60,60,60,60,60,60,60,60
 NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
+ColumnLineWidth: 2
+ColourColumnLine: 30,30,30
+//Colours
+ColourLight1: 255,255,255
+ColourLight2: 255,255,255
+ColourLight3: 255,255,255
+ColourLight4: 255,255,255
+ColourLight5: 255,255,255
+ColourLight6: 255,255,255
+ColourLight7: 255,255,255
+ColourLight8: 255,255,255
+ColourBarline: 0,0,0,0
+ColumnLineWidth: 0,0,0,0,0,0,0,0
 
 [Mania]
 Keys: 9
-ColumnStart: 314
-ColumnSpacing: 0,0,0,0,0,0,0,0
-ColumnWidth: 25,25,25,25,25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SplitStages: 0
-StageSeparation: 50
+//Mania skin config
+ColumnStart: 136
+HitPosition: 402
 UpsideDown: 0
-JudgementLine: 1
+JudgementLine: 0
+ScorePosition: 325
+ComboPosition: 170
+ColumnWidth: 60,60,60,60,60,60,60,60,60
 NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
-
-[Mania]
-Keys: 10
-ColumnStart: 276
-ColumnSpacing: 0,0,0,0,0,0,0,0,0
-ColumnWidth: 25,25,25,25,25,25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SpecialStyle: 0
-SplitStages: 1
-StageSeparation: 50
-UpsideDown: 0
-JudgementLine: 1
-NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
-
-[Mania]
-Keys: 12
-ColumnStart: 252
-ColumnSpacing: 0,0,0,0,0,0,0,0,0,0,0
-ColumnWidth: 25,25,25,25,25,25,25,25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2,2,2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SpecialStyle: 1
-SplitStages: 1
-StageSeparation: 50
-UpsideDown: 0
-JudgementLine: 1
-NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
-
-[Mania]
-Keys: 14
-ColumnStart: 226
-ColumnSpacing: 0,0,0,0,0,0,0,0,0,0,0,0,0
-ColumnWidth: 25,25,25,25,25,25,25,25,25,25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2,2,2,2,2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SpecialStyle: 0
-SplitStages: 1
-StageSeparation: 50
-UpsideDown: 0
-JudgementLine: 1
-NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
-
-[Mania]
-Keys: 16
-ColumnStart: 202
-ColumnSpacing: 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-ColumnWidth: 25,25,25,25,25,25,25,25,25,25,25,25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SpecialStyle: 1
-SplitStages: 1
-StageSeparation: 50
-UpsideDown: 0
-JudgementLine: 1
-NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
-
-
-[Mania]
-Keys: 18
-ColumnStart: 177
-ColumnSpacing: 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
-ColumnWidth: 25,25,25,25,25,25,25,25,25,25,25,25,25,25,25,25,25,25
-ColumnLineWidth: 2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2
-BarlineHeight: 2
-HitPosition: 413
-LightPosition: 413
-ScorePosition: 350
-ComboPosition: 320
-SpecialStyle: 0
-SplitStages: 1
-StageSeparation: 50
-UpsideDown: 0
-JudgementLine: 1
-NoteBodyStyle: 0
-ColourBarline: 200,0,0,255
-ColourColumnLine: 120,120,120,255
-ColourHold: 50,170,190,255
-ColourBreak: 150,0,0,255
+ColumnLineWidth: 2
+ColourColumnLine: 30,30,30
+//Colours
+ColourLight1: 255,255,255
+ColourLight2: 255,255,255
+ColourLight3: 255,255,255
+ColourLight4: 255,255,255
+ColourLight5: 255,255,255
+ColourLight5: 255,255,255
+ColourLight6: 255,255,255
+ColourLight7: 255,255,255
+ColourLight8: 255,255,255
+ColourBarline: 0,0,0,0
+ColumnLineWidth: 0,0,0,0,0,0,0,0,0
