--- a/current/skin.ini
+++ b/current/skin.ini
@@ -1,7 +1,7 @@
 [General]
-Name: Yelloskin
-Author: Various
-Version: 4.0
+Name: Distraction-LESS
+Author: Yellowsink
+Version: 1.0
 AnimationFramerate: 60
 CursorCentre: 1
 CursorExpand: 0
