--- a/current/Skin.ini
+++ b/current/Skin.ini
@@ -1,7 +1,7 @@
 [General]
-Name: [ Blobs ]
-Author: Galvit
-Version: 2.5
+Name: Yelloskin Reborn
+Author: Yellowsink
+Version: 1.0
 
 SliderBallFlip: 0
 CursorExpand: 0
