--- a/current/skin.ini
+++ b/current/skin.ini
@@ -1,6 +1,6 @@
 //Formatted by ck // pepega tools // cyperdark#6890
 [General]
-    Name: - # PPTenshi v1.1 [NK] # -
+    Name: PPTenshi for nonweebs
     Author: Nikstrim
     Profile: https://osu.ppy.sh/users/10577559
     ╔=====================================╗
