colours from my old slightly modifed blobs (note to self: upload my old sligtly modified skin collection)

--- a/current/skin.ini
+++ b/current/skin.ini
@@ -29,10 +29,20 @@
 
 [Colours]
 // ╔════ Combo Colors ════╗ \\
-    Combo1: 243, 170, 78 // #f3aa4e
-    Combo2: 253, 206, 170 // #fdceaa
-    Combo3: 102, 69, 69 // #664545
-    Combo4: 112, 136, 116 // #708874
+    // Monokai Pink
+    Combo1: 176,82,121
+// Monokai Yellow
+    Combo2: 229,181,103
+// Monokai Purple
+    Combo3: 158,134,200
+// Monokai Green
+    Combo4: 180,210,115
+// Discord Blurple
+    Combo5: 114,137,218
+// Monokai Orange
+    Combo6: 232,125,62
+// Monokai Blue
+    Combo7: 108,153,187
     MenuGlow: 243, 170, 78 // #f3aa4e
     InputOverlayText: 253, 206, 170 // #fdceaa
     SliderBorder: 225, 78, 243 // #e14ef3
